--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="forgot_password">忘记密码?</string>
     <string name="regist_now">立即注册</string>
     <string name="login_button_text">登 录</string>
+    <string name="search_hint">搜索品牌、类目、关键字</string>
 </resources>
