优化登录逻辑，

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="forgot_password">忘记密码?</string>
     <string name="regist_now">立即注册</string>
     <string name="login_button_text">登 录</string>
+    <string name="register_button_text">注 册</string>
     <string name="search_hint">搜索品牌、类目、关键字</string>
     <string name="my_wallet">我的钱包</string>
     <string name="my_balance">余额</string>
