--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="feed_back">意见反馈</string>
     <string name="connect_to_service">联系客服</string>
     <string name="manage_address">管理收货地址</string>
+    <string name="apply_shop">申请入驻</string>
     <string name="my_collection">我的收藏</string>
     <string name="my_server">我的服务</string>
     <string name="my_evaluate">我的评价</string>
